--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:qwe123++@localhost:5432/mydb?schema=public"
+NEXTAUTH_SECRET="This is an example"
+GOOGLE_ID ="939670633328-rako80mn01bq3ibe4kgrir3ig04bb377.apps.googleusercontent.com"
+GOOGLE_SECRET ="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"
